<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rl_content"
    android:fitsSystemWindows="true"
    tools:ignore="RtlHardcoded">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16.5dp"
        android:src="@drawable/login_close_icon"/>

    <TextView
        android:id="@+id/txt_login_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/login_state_not_login"
        android:textColor="#0F0F0F"
        android:textSize="24sp"/>

    <com.intelligent.reader.view.login.MobileNumberEditText
        android:id="@+id/etxt_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txt_login_state"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/login_etxt_normal_bg"
        android:gravity="center_vertical"
        android:hint="@string/login_mobile_number_hint"
        android:inputType="number"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:textColor="#000000"
        android:textColorHint="#767676"
        android:textSize="14sp"/>

    <ImageView
        android:id="@+id/img_clear_number"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etxt_mobile_number"
        android:layout_marginRight="36dp"
        android:layout_marginTop="-36dp"
        android:padding="10dp"
        android:src="@drawable/login_clear_icon"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_number_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etxt_mobile_number"
        android:layout_marginRight="17dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_mobile_number_error"
        android:textColor="#F75266"
        android:textSize="12sp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_number_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxt_mobile_number"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/txt_number_error"
        android:src="@drawable/login_number_error_icon"
        android:visibility="gone"/>

    <com.intelligent.reader.view.login.VerifyCodeEditText
        android:id="@+id/etxt_verify_code"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etxt_mobile_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_etxt_normal_bg"
        android:gravity="center_vertical"
        android:hint="@string/login_verify_code_hint"
        android:inputType="number"
        android:maxLength="6"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:textColor="#000000"
        android:textColorHint="#767676"
        android:textSize="14sp"/>

    <com.intelligent.reader.view.login.FetchCodeTextView
        android:id="@+id/txt_fetch_code"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/etxt_verify_code"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_fetch_verify_code"
        android:textColor="#C4C4C4"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/etxt_verify_code"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="75.5dp"
        android:background="@drawable/login_btn_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_login_btn"
        android:textColor="@color/login_btn_text_color"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        tools:ignore="SmallSp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_bottom_tips_1"
            android:textColor="#dadada"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/txt_service_policy"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:gravity="center_vertical"
            android:text="@string/login_bottom_tips_2"
            android:textColor="#B6CDCD"
            android:textSize="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_bottom_tips_3"
            android:textColor="#dadada"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/txt_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:gravity="center_vertical"
            android:text="@string/login_bottom_tips_4"
            android:textColor="#B6CDCD"
            android:textSize="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_wechat"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="14dp"
            android:layout_weight="1"
            android:background="#DBDBDB"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_third_login"
            android:textColor="#B4B4B4"
            android:textSize="12sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:background="#DBDBDB"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wechat"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="65dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_wechat_icon"/>

        <TextView
            android:id="@+id/txt_wx_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_weixin"
            android:textColor="#B4B4B4"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_qq"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="65dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_qq_icon"/>

        <TextView
            android:id="@+id/txt_qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_qq"
            android:textColor="#B4B4B4"
            android:textSize="12sp"/>

    </LinearLayout>


</RelativeLayout>